--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@balkangraph/orgchart.js": "^7.1.2",
     "@dabeng/react-orgchart": "^1.0.0",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@progress/kendo-data-query": "^1.5.4",
@@ -21,9 +25,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@trendmicro/react-breadcrumbs": "^0.5.5",
+    "@trendmicro/react-buttons": "^1.3.1",
+    "@trendmicro/react-dropdown": "^1.4.0",
     "@unicef/react-org-chart": "^0.3.4",
     "bootstrap": "^4.5.0",
     "checkbox": "0.0.1",
+    "classnames": "^2.2.6",
     "goober": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.0.0",
@@ -41,15 +49,18 @@
     "react-d3-tree": "^1.16.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-excel-renderer": "^1.1.0",
     "react-fetch-autocomplete": "0.0.5",
     "react-graph-vis": "^1.0.5",
     "react-icons": "^3.10.0",
     "react-images-upload": "^1.2.8",
     "react-paypal-button-v2": "^2.6.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.2",
+    "react-scripts": "^3.4.3",
     "react-table": "^7.3.2",
-    "react-token-auth": "^1.1.7"
+    "react-token-auth": "^1.1.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
