--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-calendar": "^3.1.0",
+    "react-csv-reader": "^3.1.1",
     "react-d3-tree": "^1.16.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
