--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-calendar": "^3.1.0",
     "react-csv-reader": "^3.1.1",
     "react-d3-tree": "^1.16.1",
+    "react-date-picker": "^8.0.3",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-excel-renderer": "^1.1.0",
